# race-ocr-infer

./: .gitignore  README.md  pyproject.toml
src/raceocr/: __init__.py  __main__.py  album.py  cli.py  config.py  infer.py  io.py  production.py  setup.py  util.py
