[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raceocr"
version = "0.0.1"
description = "Race OCR inference CLI (YOLO + PaddleOCR)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["ultralytics>=8.3,<9", "pillow>=10,<12"]

[project.scripts]
raceocr = "raceocr.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]